Doc/force-app/main/default/objects/OP4I_Entitlement_View__c/fields/DLI_Product__c.field-meta.xml
<CustomField>
    <fullName>DLI_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DLI Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>OP4I Entitlement Views (DLI Product)</relationshipLabel>
    <relationshipName>OP4I_Entitlement_Views1</relationshipName>
    <type>Lookup</type>
</CustomField>