Doc/force-app/main/default/objects/OP4I_Entitlement_View__c/fields/DLI_Product_id__c.field-meta.xml
<CustomField>
    <fullName>DLI_Product_id__c</fullName>
    <label>DLI Product id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>