Doc/force-app/main/default/objects/OP4I_Entitlement_View__c/fields/DLIP_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>DLIP_Product_Type__c</fullName>
    <label>DLIP Product Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>