Doc/force-app/main/default/objects/OP4I_Entitlement_View__c/fields/First_Segment_Months__c.field-meta.xml
<CustomField>
    <fullName>First_Segment_Months__c</fullName>
    <label>First Segment Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>