Doc/force-app/main/default/objects/OP4I_Entitlement_View__c/fields/Include_in_Select_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Select_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Select Bundle</label>
    <type>Checkbox</type>
</CustomField>