Doc/force-app/main/default/objects/OP4I_Entitlement_View__c/fields/One_Time_Credit__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Credit__c</fullName>
    <label>One Time Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>