Doc/force-app/main/default/objects/OP4I_Entitlement_View__c/fields/OP4I_Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Deal_Id__c</fullName>
    <label>OP4I Deal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>