Doc/force-app/main/default/objects/OP4I_Entitlement_View__c/fields/OSA_Status__c.field-meta.xml
<CustomField>
    <fullName>OSA_Status__c</fullName>
    <label>OSA Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>