Doc/force-app/main/default/objects/OP4I_Entitlement_View__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>