Doc/force-app/main/default/objects/OP4I_Entitlement_View__c/fields/Renewal_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Billing_Frequency__c</fullName>
    <label>Renewal Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semiannual</fullName>
            </value>
            <value>
                <fullName>Quarterly Y1 Only</fullName>
            </value>
            <value>
                <fullName>Semi-annual Y1 Only</fullName>
            </value>
            <value>
                <fullName>Invoice Plan</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>No Software</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>