Doc/force-app/main/default/objects/OP4I_Entitlement_View__c/fields/Segment_Index__c.field-meta.xml
<CustomField>
    <fullName>Segment_Index__c</fullName>
    <label>Segment Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>