Doc/force-app/main/default/objects/OP4I_Entitlement_View__c/listViews/Vignesh.listView-meta.xml
<ListView>
    <fullName>Vignesh</fullName>
    <columns>Product_Instance__c</columns>
    <columns>Segment_Index__c</columns>
    <columns>OP4I_Deal_Id__c</columns>
    <columns>Account__c</columns>
    <columns>DLIP_Id__c</columns>
    <columns>Associated_OSA__c</columns>
    <columns>DLI_Product__c</columns>
    <columns>DLIP_Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Sale_Price__c</columns>
    <columns>DLI_Price__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Parent_Subscription__c</columns>
    <columns>Processing_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Associated_OSA__c</field>
        <operation>equals</operation>
        <value>20263</value>
    </filters>
    <label>Vignesh</label>
    <language>en_US</language>
</ListView>